--- a/packages/summer-earn-rates-subgraph/subgraph.template.yaml
+++ b/packages/summer-earn-rates-subgraph/subgraph.template.yaml
@@ -42,6 +42,8 @@ dataSources:
           file: ./abis/SkySSRAuthOracle.json
         - name: SkySUSDS
           file: ./abis/SkySUSDS.json
+        - name: MoonwellToken
+          file: ./abis/MoonwellToken.json
       blockHandlers:
         - handler: handleBlock
           filter:
