--- a/packages/deployment/package.json
+++ b/packages/deployment/package.json
@@ -42,7 +42,8 @@
     "visualize:core": "hardhat ignition visualize ./ignition/modules/fleet.ts",
     "create-distributions-tx": "hardhat run scripts/governance/create-distributions-transaction-safe.ts --network $NETWORK",
     "whitelist-vesting-wallets-tx": "hardhat run scripts/governance/whitelist-vesting-wallets-safe.ts --network $NETWORK",
-    "generate-merkle-root": "tsx scripts/generate-merkle-root.ts"
+    "generate-merkle-root": "tsx scripts/generate-merkle-root.ts",
+    "update-fleet-configurations": "hardhat run scripts/governance/update-fleet-configurations-safe.ts --network $NETWORK"
   },
   "devDependencies": {
     "@layerzerolabs/lz-v2-utilities": "2.3.39",
@@ -63,7 +64,9 @@
     "@summerfi/tenderly-utils": "workspace:*",
     "@summerfi/typescript-config": "workspace:*",
     "@summerfi/voting-decay": "workspace:*",
+    "@types/lodash": "^4.17.16",
     "@types/prompts": "2.4.9",
+    "chalk": "^4.1.2",
     "hardhat": "2.22.14",
     "hardhat-contract-sizer": "2.10.0",
     "kleur": "4.1.5",
@@ -71,12 +74,14 @@
     "ts-node": "10.9.2"
   },
   "dependencies": {
+    "@layerzerolabs/lz-v2-utilities": "^2.3.39",
     "@openzeppelin/merkle-tree": "1.0.7",
     "@safe-global/api-kit": "^2.5.7",
     "@safe-global/protocol-kit": "^5.2.0",
     "@safe-global/types-kit": "^1.0.1",
     "@summerfi/earn-protocol-contracts": "workspace:*",
     "dotenv": "16.4.5",
+    "lodash": "^4.17.21",
     "solhint-plugin-prettier": "0.1.0",
     "solidity-bytes-utils": "0.8.2",
     "tsx": "4.19.2"
