--- a/packages/summer-earn-protocol-subgraph/subgraph.template.yaml
+++ b/packages/summer-earn-protocol-subgraph/subgraph.template.yaml
@@ -116,6 +116,9 @@ templates:
         - event: FleetCommanderWithdrawnFromArks(indexed address,address,uint256)
           handler: handleFleetCommanderWithdrawnFromArks
           receipt: true
+        - event: FleetCommanderRedeemedFromArks(indexed address,address,uint256)
+          handler: handleFleetCommanderRedeemedFromArks
+          receipt: true
         - event: FleetCommanderDepositCapUpdated(uint256)
           handler: handleFleetCommanderDepositCapUpdated
           receipt: true
