--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "packages/external-dependencies/lib/openzeppelin-contracts-upgradeable"]
 	path = packages/external-dependencies/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "packages/external-dependencies/lib/solmate"]
+	path = packages/external-dependencies/lib/solmate
+	url = https://github.com/transmissions11/solmate
