--- a/packages/core-contracts/foundry.toml
+++ b/packages/core-contracts/foundry.toml
@@ -31,6 +31,7 @@ sepolia = "${SEPOLIA_RPC_URL}"
 base = "${BASE_RPC_URL}"
 mainnet = "${MAINNET_RPC_URL}"
 arbitrum= "${ARBITRUM_RPC_URL}"
+sonic= "${SONIC_RPC_URL}"
 
 [etherscan]
 sepolia = { key = "7KB7N6WAQJFFC2F5UP98RBTESZ11EK8X8W}" }
