chore: fix aave v3 oracle in subgraph

--- a/packages/summer-earn-protocol-subgraph/subgraph.yaml
+++ b/packages/summer-earn-protocol-subgraph/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: HarborCommand
-    network: base
+    network: sonic-mainnet
     source:
       abi: HarborCommand
-      address: "0x09eb323dBFECB43fd746c607A9321dACdfB0140F"
-      startBlock: 25773568
+      address: "0x092C41C6e9A8A54577CeDe5d077971116DdD6F57"
+      startBlock: 13000000
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
